# pyrid

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yaml
src/pyrid/: __init__.py  __main__.py  colors.py  config.py  constants.py  enums.py  formatter.py  rules.py  types.py  utils.py
src/pyrid/core/: __init__.py  base.py  linter.py  registry.py  reporter.py
src/pyrid/docstring/: __init__.py  checker.py  rules.py  utils.py  violations.py
src/pyrid/mutable_defaults/: __init__.py  checker.py  md.py  utils.py
tests/: conftest.py  test_config.py  test_utils.py
tests/docstring/: test_docstring.py  test_rules.py
tests/mutable_defaults/: test_md.py
